# test-submodule-root

./: .gitmodules  CMakeLists.txt  main.cpp
